fix: keep user.close coherent in multi-user case
`BrowserlessUserContext.close()` set `VaadinService` and `VaadinSession`
to the closing user before `fireSessionDestroyAndDrain`, but left
`VaadinRequest`, `VaadinResponse`, and the security context carrying
whatever the thread happened to hold from another active user — a
cross-user non-active window close re-activates the surviving window at
the end, so the destroy phase observed the foreign user's identity. The
post-close cleanup then cleared the closing user's security snapshot
without restoring the active user's, leaving `activeContext` pointing at
the surviving window while the thread carried no security. Subsequent
operations on that window called `activate()`, which skips
`restoreSecurityContext()` when `previous.user == this.user`, so the
window silently ran with cleared security.

Mirror the cross-user UI close path: capture the active foreign window
before the destroy phase, install the closing user's request/response
and security via `restoreSecurityContext()` so destroy listeners observe
this user's identity (Vaadin nulls request/response inside its own
listeners, but symmetric prep guards against future changes), and after
the destroy + clear re-activate the surviving window via the same
clear-and-activate pattern used by `BrowserlessUIContext.close()` to
restore thread coherence. Two regression tests
(`userClose_destroyListenerSeesClosingUserSecurity` and
`userClose_leavesActiveUserCoherentOnTheThread`) lock down the new
guarantees.

While here, save and restore `UI.getCurrent()` in the user constructor
for parity with the other thread-locals (preventive), augment
`uiClose_nonActiveCrossUserCloseLeavesThreadCoherentWithActiveContext`
with `VaadinRequest` / `VaadinResponse` assertions, and replace
`new HashSet<>(Arrays.asList(roles))` with `Set.of(roles)` in
`QuarkusSecurityContextHandler.createCredentials`.